syntax = "proto3";

package models;

message LinearModelDefinition {
  repeated float weights = 1;
}
